# next-load

./: .gitignore  .infisical.json  Kitfile  LICENSE  README.md  marimo.css  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  mlflow.yml  parameters_baseline_models.yml  parameters_candidate_models.yml  parameters_exploratory_data_analysis.yml  parameters_extract_load_transform.yml  parameters_model_serve.yml
docs/source/: conf.py  index.rst
src/next_load/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
src/next_load/core/: __init__.py  karnataka_state_load_dispatch_centre.py  nl_auth.py
src/next_load/pipelines/: __init__.py
src/next_load/pipelines/baseline_models/: __init__.py  baseline_seasonal_naive.py  nodes.py  pipeline.py
src/next_load/pipelines/candidate_models/: __init__.py  candidate_lgb.py  nodes.py  pipeline.py
src/next_load/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py  preprocessing.py
src/next_load/pipelines/exploratory_data_analysis/: __init__.py  pipeline.py
src/next_load/pipelines/exploratory_data_analysis/preprocessed_inspection/: bivariate_analysis.py  univariate_analysis.py
src/next_load/pipelines/exploratory_data_analysis/raw_inspection/: 01_data_integrity.py  data_integrity.py
src/next_load/pipelines/extract_load_transform/: __init__.py  elt_config.py  extract_nrldc_forecast.py  pipeline.py  transform_nrldc_forecast.py
src/next_load/pipelines/model_selection/: __init__.py  nodes.py  pipeline.py
src/orchestrator/: next_load_orchestrator.py
tests/pipelines/exploratory_data_analysis/: test_pipeline.py
tests/pipelines/extract_load_transform/: test_pipeline.py
tests/pipelines/model_serve/: test_pipeline.py
